ingress/tls-ingress-apache.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apache
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - apache.domain.net
    secretName: certificado-apache-tls
  rules:
  - host: apache.domain.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80
